ingress-multiple-ns/ingress1.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-hello-world-1
  namespace: hello1
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - backend:
            serviceName: aks-helloworld-one
            servicePort: 80
          path: /hello-world-1(/|$)(.*)
