ingress-multiple-ns/ingress2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-hello-world-2
  namespace: hello2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - backend:
            serviceName: aks-helloworld-two
            servicePort: 80
          path: /hello-world-2(/|$)(.*)
